syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "User.Grpc.Protos";

service UserProtoService {
  rpc Register (UserRequest) returns (google.protobuf.Empty);
  rpc Login (LoginRequest) returns (UserReply);
  rpc GetUserByUsername(LoginRequest) returns (UserReply);
}

message UserRequest {
  string userName = 1;
  string password = 2;
}

message UserReply {
  string user_name = 1;
  string subject_id = 2;
  string image_url = 3;
}

message LoginRequest {
  string user_name = 1;
  string pass_word = 2;
}